<resources>
    <string name="app_name">GdTestHub</string>
    <string name="pref_dream_text_key">pref_dream_text</string>
    <string name="pref_dream_text_default">zzzZZZzzz</string>
    <string name="title_activity_handler">HandlerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_str">hello host</string>
    <string name="hello_hot">hello</string>
    <string name="hot_text">hot_text</string>
    <string name="hot_hint">hot_hint</string>
    <string name="hot_hello">hot_hello</string>
    <string name="hot_bye">hot_bye</string>
    <string name="title_activity_tab">TabActivity</string>

    <!-- 用于向 google 请求 idToken（获取后用于与自己服务端交互） -->
    <string name="server_client_id">244708599475-9jqf2re62topph56skoabspuid99k7j2.apps.googleusercontent.com</string>

    <!-- facebook 登录 -->
    <string name="facebook_app_id">546473546012331</string>
    <!-- 5.15 及以后用不到了 -->
    <string name="fb_login_protocol_scheme">fb546473546012331</string>
    <!-- 在 dynamic module 的 androidManifest 中使用 -->
    <string name="title_dynamicfeature">DynamicModule</string>
</resources>
