<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.gdeer.gdtesthub.view.textview.hotfix.HotTextView
        android:id="@+id/tvHot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot_text"
        android:textSize="30dp"
        app:hello="@string/hot_hello"
        app:bye="@string/hot_bye"
        android:hint="@string/hot_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.gdeer.gdtesthub.view.textview.hotfix.HotEditText
        android:id="@+id/etHot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hello_hot"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHot" />
</androidx.constraintlayout.widget.ConstraintLayout>